--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
+    "aos": "^3.0.0-beta.6",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
