--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "aos": "^3.0.0-beta.6",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
