--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/aos": "^3.0.4",
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
+    "@types/styled-components": "^5.1.23",
     "autoprefixer": "^10.4.2",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
@@ -41,6 +42,7 @@
     "lint-staged": "^12.3.4",
     "postcss": "^8.4.6",
     "prettier": "2.5.1",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
