--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "noImplicitThis": true,
     "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/App/Sidebar/styles.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "components/App/Sidebar/styles.ts"
+  ],
   "exclude": ["node_modules"]
 }
