--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "react-hook-form": "^7.27.1"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/aos": "^3.0.4",
     "@types/node": "17.0.19",
     "@types/react": "17.0.39",
+    "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.23",
     "autoprefixer": "^10.4.2",
     "babel-plugin-styled-components": "^2.0.6",
@@ -44,6 +46,7 @@
     "lint-staged": "^12.3.4",
     "postcss": "^8.4.6",
     "prettier": "2.5.1",
+    "react-redux": "^8.0.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
