--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+backend/node_modules
+
+
+# local env files
+backend/.env
+
 # Unnecessary files / folders.
 test.js
 /.tours
