--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-**/node_modules
+backend/node_modules
 
 #builds
 .next
 
 # local env files
-**/.env
+.env
 
 # Unnecessary files / folders.
 test.js
