--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,6 @@
     "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
-    "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
     "postcss": "^8.4.6",
     "prettier": "2.5.1",
@@ -50,5 +49,8 @@
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
+  },
+  "optionalDependencies": {
+    "husky": "^7.0.4"
   }
 }
