fixes docker entrypoint

--- a/app_structure/lambda_base_layer/Dockerfile
+++ b/app_structure/lambda_base_layer/Dockerfile
@@ -18,4 +18,4 @@ RUN pip install -r requirements.txt -t ./python
 
 # ZIP it up
 RUN zip -r layer.zip ./python/
-ENTRYPOINT ["/bin/bash", "-1"]
+ENTRYPOINT ["/bin/bash", "-l"]
