--- a/app_structure/package.json
+++ b/app_structure/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app_structure",
   "version": "0.1.0",
+  "license": "GPL-3.0",
   "bin": {
     "app_structure": "bin/app_structure.js"
   },
